# doesitstand

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: pseudocode.md
doesitstand/: agenda_prompts.py  arxiv_client.py  cli.py  env.py  guard.py  llm_client.py  openalex_client.py  pdf_extract.py  prompts.py  ref_check.py  reference_resolver.py  review_pipeline.py  science_prompts.py  screen_prompts.py  stats.py
doesitstand/agenda/: agenda.py
doesitstand/contracts/: __init__.py  agenda.v1.schema.json  dossier.v1.schema.json  evidence.v1.schema.json  portfolio.v1.schema.json  reference_check_report.v1.schema.json
doesitstand/integrity/: claim_verification.py  hallucination_check.py  reference_check.py
doesitstand/profiles/: tmlr.json
doesitstand/science/: __init__.py  dossier.py  hypotheses.py  ranking.py  test_plan.py
doesitstand/screening/: screen.py
scripts/: naming_domain_screen.py
tests/: test_resilience.py
